add linkedin link

--- a/contact_project.html
+++ b/contact_project.html
@@ -615,8 +615,18 @@ ul#footer-lefttop li#quick-links ul a:hover {
 
 		<div id="footer">			
 			<div id="footer-right">
-				<!-- a href="http://www54.sap.com/communities/hub.html" id="social-network"  onclick="TrackLink('http%3a%2f%2fwww.sap.com%2findex.epx','Follow SAP','ClickArea=footer')" > Follow SAP </a -->
-				<span style="color:#BBBBBB;font-family: 'Lucida Grande',Geneva,Arial,Verdana,sans-serif;font-size:11px;">Alexander Koziy &copy; <script>document.write(new Date().getFullYear())</script></span>
+				<table>
+					<tr>
+						<td>
+							<a  href="https://www.linkedin.com/in/alex-koziy-526b3257/" target="_blank" >
+								<img alt="" style="margin-top:-7px;margin-right: 20px;" src="images/iconfinder_LINKEDIN_1217173(2).png">
+							</a>
+						</td>	
+						<td>
+							<span style="color:#BBBBBB;font-family: 'Lucida Grande',Geneva,Arial,Verdana,sans-serif;font-size:11px;">Alexander Koziy &copy; <script>document.write(new Date().getFullYear())</script></span>
+						</td>
+					</tr>
+				</table>
 			</div>
 		</div>
 
