--- a/ru/contact_project.html
+++ b/ru/contact_project.html
@@ -650,7 +650,18 @@ ul#footer-lefttop li#quick-links ul a:hover {
 
 		<div id="footer">			
 			<div id="footer-right">				
-				<span style="color:#BBBBBB;font-family: 'Lucida Grande',Geneva,Arial,Verdana,sans-serif;font-size:11px;">Александр Козий &copy; <script>document.write(new Date().getFullYear())</script></span>
+				<table>
+					<tr>
+						<td>
+							<a  href="https://www.linkedin.com/in/alex-koziy-526b3257/" target="_blank" >
+								<img alt="" style="margin-top:-7px;margin-right: 20px;" src="../images/iconfinder_LINKEDIN_1217173(2).png">
+							</a>
+						</td>	
+						<td>
+							<span style="color:#BBBBBB;font-family: 'Lucida Grande',Geneva,Arial,Verdana,sans-serif;font-size:11px;">Александр Козий &copy; <script>document.write(new Date().getFullYear())</script></span>
+						</td>
+					</tr>
+				</table>
 			</div>
 		</div>
 
