--- a/ru/index.html
+++ b/ru/index.html
@@ -9,6 +9,7 @@
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="../css/topmenu.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="../css/langswitcher.css"/>
+		<link rel="stylesheet" media="screen" type="text/css" href="../css/fontawesome.min.css"/>
 		
 	</head>
 	<body style="background:url('../images/backgroungs/2.png');	background-position:bottom top;font-family: 'Lucida Grande',Geneva,Arial,Verdana,sans-serif;" >
@@ -233,9 +234,31 @@ table.favorite_services {
 
 					</div-->
 					
-										<table class="favorite_services" border="0" style="width:270px;margin-top:30px;">
+										<table class="favorite_services" border="0" style="width:270px;margin-top:10px;">
 						<tbody>
-							<tr>
+												<tr>
+							<td align="center">
+								<div style="font-size:150%;font-family:Cambria;">
+									Рекомендации 
+								</div>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								<div  style="margin-top:10px;font-size:90%;font-style: italic;font-family:Cambria;">
+									"Alex is a notch above master. I would consider him a Java Guru. Give him your software 
+									requirements and get the exact result you requested. No hand holding here. He has developed 
+									many of the stand out features in both the Dynamic Public Safety and Dynamic Inventory 
+									software applications including but not limite..." 
+									<a href="https://www.linkedin.com/in/alex-koziy-526b3257/" target="_blank">
+											See more
+									</a>
+								</div>
+							</td>
+						</tr>
+						
+<!-- 							<tr>
 								<td align="center">
 									<a href="http://java.com" target="_blank">
 										<img src="../images/technologies/ico_java.png" title="Java">
@@ -270,7 +293,7 @@ table.favorite_services {
 										<img style="margin-top:30px;" height="70px" src="../images/technologies/tomcat.png" title="Tomcat">
 									</a>
 								</td>
-							</tr>							
+							</tr>		 -->					
 							<!-- tr>
 								<td colspan="2" align="center">
 									<a href="http://www.freedomain.co.nr/" target="_blank" title="Free Domain Name Registration">
@@ -562,9 +585,20 @@ ul#footer-lefttop li#quick-links ul a:hover {
 		</div> <!-- main -->
 		</div><!-- wrap -->
 
-		<div id="footer">			
-			<div id="footer-right">				
-				<span style="color:#BBBBBB;font-family: 'Lucida Grande',Geneva,Arial,Verdana,sans-serif;font-size:11px;">Александр Козий &copy; <script>document.write(new Date().getFullYear())</script></span>
+		<div id="footer">
+			<div id="footer-right">	
+				<table>
+					<tr>
+						<td>
+							<a  href="https://www.linkedin.com/in/alex-koziy-526b3257/" target="_blank" >
+								<img alt="" style="margin-top:-7px;margin-right: 20px;" src="../images/iconfinder_LINKEDIN_1217173(2).png">
+							</a>
+						</td>	
+						<td>
+							<span style="color:#BBBBBB;font-family: 'Lucida Grande',Geneva,Arial,Verdana,sans-serif;font-size:11px;">Александр Козий &copy; <script>document.write(new Date().getFullYear())</script></span>
+						</td>
+					</tr>
+				</table>
 			</div>
 		</div>
 
