--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <!-- English Header start -->
 <html>  
 	<head>
-		<title>Custom CRM/ERP Development</title>
+		<title>Custom CRM & ERP Development in Java, ZKoss (ZK) | @alexkvat | Alex Koziy  </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="The original and simplest sticky footer. Clean and valid HTML and CSS for all browsers.">
+		<meta name="description" content="Development, support, enhancement CRM ERP management systems, ZKoss zkoss.org Java, J2EE development ">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/topmenu.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/langswitcher.css"/>
