--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!-- English Header start -->
 <html>  
 	<head>
-		<title>Custom CRM/ERP Development</title>
+		<title>ZK developer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="The original and simplest sticky footer. Clean and valid HTML and CSS for all browsers.">
+		<meta name="description" content="Development of CRM in ZK Framework.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/topmenu.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/langswitcher.css"/>
@@ -146,7 +146,7 @@
 						<li>Based in Kiev, Ukraine</li>
 						<li>Key solutions: Custom web-based applications</li>
 						<li>Key services: Development custom web-oriented management systems on Java/Java EE platform, their integration with other systems, support, maintainance and enhancement </li>
-						<li>Key technologies: Java/J2EE, ZK, Hibernate/JPA, Oracle, SQL Server, MySQL, PostgreSQL</li>
+						<li>Key technologies: Java/J2EE, ZK Framework, Hibernate/JPA, Oracle, SQL Server, MySQL, PostgreSQL</li>
 					</ul>
            
 	</div>
