--- a/profile_realtor.html
+++ b/profile_realtor.html
@@ -1,10 +1,10 @@
 <!-- English Header start -->
 <html>  
 	<head>
-		<title>Custom CRM/ERP Development</title>
+		<title>Real estate CRM preview</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="The original and simplest sticky footer. Clean and valid HTML and CSS for all browsers.">
+		<meta name="description" content="Real Estate CRM Software is a unified contact management system that helps the real estate professionals keep all the clients' information in one centralized database.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/topmenu.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/langswitcher.css"/>
@@ -180,7 +180,7 @@ $(document).ready(function() {
 		            </div>
 		            		            
 		            <div style="font: 13px Tahoma,sans-serif;">
-			            <strong>Technologies:</strong> Java, ZK Ajax, MySQL, Hibernate, Tomcat<br />
+			            <strong>Technologies:</strong> Java, ZK Framework, MySQL, Hibernate, Tomcat<br />
 						<strong>Project Size:</strong> 12 person-months<br />
 		            </div>
 		            
