--- a/ru/index.html
+++ b/ru/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 
-		<title>Custom CRM/ERP Development</title>
+		<title>Разработка CRM и ERP на заказ на Java/J2EE ZK Framework Ajax | @alexkvat | Alexander Koziy</title>
 
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="The original and simplest sticky footer. Clean and valid HTML and CSS for all browsers.">
+		<meta name="description" content="Разработка CRM ERP систем управления, приложений, поддержка, модернизация , ZKoss zkoss.org Java, J2EE  бесплатная консультация.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="../css/topmenu.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="../css/langswitcher.css"/>
