--- a/ru/profile_realtor.html
+++ b/ru/profile_realtor.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 
-		<title>Custom CRM/ERP Development</title>
+		<title>Обзор CRM для агенств недвижимости</title>
 
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="The original and simplest sticky footer. Clean and valid HTML and CSS for all browsers.">
+		<meta name="description" content="CRM для агенств недвижимости - это унифицированная система управления контактами, которая помагает агентам по недвижимости хранить всю клиентскую информацию в одной централизованной базе данных.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="../css/topmenu.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="../css/langswitcher.css"/>
