--- a/services.html
+++ b/services.html
@@ -1,10 +1,10 @@
 <!-- English Header start -->
 <html>  
 	<head>
-		<title>Custom CRM/ERP Development</title>
+		<title>Custom ERP Development</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="The original and simplest sticky footer. Clean and valid HTML and CSS for all browsers.">
+		<meta name="description" content="Custom management systems development.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/topmenu.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/langswitcher.css"/>
