descs in Ukraine

--- a/ru/about.html
+++ b/ru/about.html
@@ -5,7 +5,7 @@
 		<title>Разработчик ZK Framework</title>
 
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="Разработка CRM на ZK Framework.">
+		<meta name="description" content="Разработка CRM на ZK Framework в Украине.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="../css/topmenu.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="../css/langswitcher.css"/>
