--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 		<title>ZK developer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="Development of CRM in ZK Framework.">
+		<meta name="description" content="Development of CRM in ZK Framework in Ukraine.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/topmenu.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/langswitcher.css"/>
