--- a/ru/profile_accounting.html
+++ b/ru/profile_accounting.html
@@ -185,7 +185,7 @@ $(document).ready(function() {
 		            </div>
 		            		            
 		            <div style="font: 13px Tahoma,sans-serif;">
-			            <strong>Технологии:</strong> Java, ZK Ajax, MySQL, Hibernate, Tomcat<br />
+			            <strong>Технологии:</strong> Java, ZK Framework, MySQL, Hibernate, Tomcat<br />
 						<strong>Длительность проекта:</strong> 2 человеко-месяца<br />
 		            </div>
 		            
