--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ table.favorite_services {
             </div>
             
             <div id="col2" style="margin-right:25px;text-align:justify;">
-            		<a href="cv.pdf" style="vertical-align:middle;">
+            		<a href="cv_AlexKoziy.pdf" style="vertical-align:middle;">
             			<img alt="" src="images/cv/res4.png">
             		</a>
 
