--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/topmenu.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/langswitcher.css"/>
+		<script src="jquery16/jquery-3.4.1.min.js"></script>
 	</head>
 	<body style="background:url('images/backgroungs/2.png');	background-position:bottom top;font-family: 'Lucida Grande',Geneva,Arial,Verdana,sans-serif;" >
 
@@ -197,7 +198,7 @@
 			    <tr id="step-1" class="step">
 			    	<td>
 				   		<div class="recept_etaps_pics" style="padding:0;">
-				   			<a target="_blank" href="https://www.dynamicpublicsafety.com/">
+				   			<a target="_blank" href="https://www.dynamicpublicsafety.com/" class="ga-stat">
 				   				<img style="margin-bottom: 10px;" class="lazy imagecache imagecache-336x269 " src="images/works/dps/1_logo.png" alt="Dynamic Public Safety" title="Dynamic Public Safety system" width="440"  />
 				   			</a>
 				   		</div>
@@ -211,7 +212,7 @@
 							<br/>
 							<p class="instructs" style="text-align:justify;">
 								Law Enforcement Software  designed for the unique demands and requirements of criminal justice systems in the USA. Dynamic Public Safety is not a "cookie cutter" system; instead it was built from the ground up to serve the entire law enforcement community.
-								<a target="_blank" href="https://www.dynamicpublicsafety.com/">
+								<a target="_blank" href="https://www.dynamicpublicsafety.com/" class="ga-stat">
 									<img src="images/view_details.png" alt="View Project" style="float: right;margin-top:5px;margin-left:5px;" />
 								</a>
 							</p>
@@ -860,6 +861,26 @@ ul#footer-lefttop li#quick-links ul a:hover {
 
   ga('create', 'UA-52763100-1', 'auto');
   ga('send', 'pageview');
+
+</script>
+<script type="text/javascript">
+// привязываем обработку статистики к разметке сайта
+$('a.ga-stat').click(function (e) {
+  // как доп параметр я передаю значение внешнего url
+  // обычно я обрабатываю ссылку, выделяя из неё только имя домена
+  // но для упрощения примера не стал вставлять лишний код
+  ga_send($(e.target).attr('href'));
+});
+}) (jQuery);
+
+function ga_send(param) {
+ga('send', {
+  hitType: 'event',
+  eventCategory: 'outbound',
+  eventAction: 'click',
+  eventLabel: 'shortcut'
+});
+}
 
 </script>
 	</body>
