--- a/portfolio.html
+++ b/portfolio.html
@@ -874,6 +874,7 @@ $('a.ga-stat').click(function (e) {
 }) (jQuery);
 
 function ga_send(param) {
+	alert('');
 ga('send', {
   hitType: 'event',
   eventCategory: 'outbound',
