--- a/portfolio.html
+++ b/portfolio.html
@@ -865,13 +865,15 @@ ul#footer-lefttop li#quick-links ul a:hover {
 </script>
 <script type="text/javascript">
 // привязываем обработку статистики к разметке сайта
-$('a.ga-stat').click(function (e) {
-	alert('aaa');
-  // как доп параметр я передаю значение внешнего url
-  // обычно я обрабатываю ссылку, выделяя из неё только имя домена
-  // но для упрощения примера не стал вставлять лишний код
-  ga_send($(e.target).attr('href'));
-});
+(function ($) {
+  // привязываем обработку статистики к разметке сайта
+  $('a.ga-stat').click(function (e) {
+	  alert('aaa');
+    // как доп параметр я передаю значение внешнего url
+    // обычно я обрабатываю ссылку, выделяя из неё только имя домена
+    // но для упрощения примера не стал вставлять лишний код
+    ga_send($(e.target).attr('href'));
+  });
 }) (jQuery);
 
 function ga_send(param) {
