--- a/portfolio.html
+++ b/portfolio.html
@@ -226,7 +226,7 @@
 			    	<td>
 			    		<hr style="color:#fdf4f4;"/>
 				   		<div class="recept_etaps_pics">
-				   			<a target="_blank" href="https://www.youtube.com/watch?v=6J2l4F3Ygaw">
+				   			<a target="_blank" href="https://www.youtube.com/watch?v=6J2l4F3Ygaw" class="ga-stat">
 				   				<img style="" class="lazy imagecache imagecache-336x269 " src="images/works/ccs/1_logo.png" alt="CCS Contract Control Suite" title="CCS Contract Control Suite" width="440"  />
 				   			</a>
 				   		</div>
@@ -240,7 +240,7 @@
 							<br/>
 							<p class="instructs" style="text-align:justify;">
 								The CCS contract management system will make your lease contracts more transparent and complete. 
-								<a target="_blank" href="https://www.youtube.com/watch?v=6J2l4F3Ygaw">
+								<a target="_blank" href="https://www.youtube.com/watch?v=6J2l4F3Ygaw" class="ga-stat">
 									<img src="images/view_details.png" alt="View Project" style="float: right;margin-top:5px;margin-left:5px;" />
 								</a>
 							</p>
@@ -254,7 +254,7 @@
 			    	<td>
 			    		<hr style="color:#fdf4f4;"/>
 				   		<div class="recept_etaps_pics">
-				   			<a target="_blank" href="https://www.dynamicinventory.net/">
+				   			<a target="_blank" href="https://www.dynamicinventory.net/" class="ga-stat">
 				   				<img style="" class="lazy imagecache imagecache-336x269 " src="images/works/inventory/1_logo.png" alt="Dynamic Inventory system" title="Dynamic Inventory system" width="440"  />
 				   			</a>
 				   		</div>
@@ -268,7 +268,7 @@
 							<br/>
 							<p class="instructs" style="text-align:justify;">
 								Dynamic Inventory allows companies to efficiently track their inventory, products, vendors, purchases and sales. 
-								<a target="_blank" href="https://www.dynamicinventory.net/">
+								<a target="_blank" href="https://www.dynamicinventory.net/" class="ga-stat">
 									<img src="images/view_details.png" alt="View Project" style="float: right;margin-top:5px;margin-left:5px;" />
 								</a>
 							</p>
