--- a/portfolio.html
+++ b/portfolio.html
@@ -876,6 +876,7 @@ ul#footer-lefttop li#quick-links ul a:hover {
 }) (jQuery);
 
 function ga_send(param) {
+	alert(param);
 ga('send', {
   hitType: 'event',
   eventCategory: 'outbound',
