--- a/portfolio.html
+++ b/portfolio.html
@@ -871,7 +871,7 @@ ul#footer-lefttop li#quick-links ul a:hover {
     // как доп параметр я передаю значение внешнего url
     // обычно я обрабатываю ссылку, выделяя из неё только имя домена
     // но для упрощения примера не стал вставлять лишний код
-    ga_send($(e.target).attr('href'));
+    ga_send($(this).attr('href'));
   });
 }) (jQuery);
 
