--- a/ru/index.html
+++ b/ru/index.html
@@ -590,6 +590,11 @@ ul#footer-lefttop li#quick-links ul a:hover {
 				<table>
 					<tr>
 						<td>
+							<a  href="https://www.upwork.com/o/profiles/users/_~01f9faec8be1f2a5f2/" target="_blank" >
+								<img alt="" style="margin-top:-7px;margin-right: 20px; height:30px;" src="images/logos-upwork-ffffff-300x150.png">
+							</a>						
+						</td>
+						<td>
 							<a  href="https://www.linkedin.com/in/alex-koziy-526b3257/" target="_blank" >
 								<img alt="" style="margin-top:-7px;margin-right: 20px;" src="../images/iconfinder_LINKEDIN_1217173(2).png">
 							</a>
