--- a/index.html
+++ b/index.html
@@ -569,12 +569,12 @@ ul#footer-lefttop li#quick-links ul a:hover {
 							<a  href="https://www.linkedin.com/in/alex-koziy-526b3257/" target="_blank" >
 								<img alt="" style="margin-top:-7px;margin-right: 20px;" src="images/iconfinder_TWITTER_1217163.png">
 							</a>						
-						</td>
-						<td>
-							<a  href="https://www.linkedin.com/in/alex-koziy-526b3257/" target="_blank" >
-								<img alt="" style="margin-top:-7px;margin-right: 20px;" src="images/iconfinder_FB_1217141.png">
-							</a>						
 						</td> -->
+						<td>
+							<a  href="https://www.upwork.com/o/profiles/users/_~01f9faec8be1f2a5f2/" target="_blank" >
+								<img alt="" style="margin-top:-7px;margin-right: 20px; height:30px;" src="images/logos-upwork-ffffff-300x150.png">
+							</a>						
+						</td>
 						<td>
 							<a  href="https://www.linkedin.com/in/alex-koziy-526b3257/" target="_blank" >
 								<img alt="" style="margin-top:-7px;margin-right: 20px;" src="images/iconfinder_LINKEDIN_1217173(2).png">
