--- a/ru/contact.html
+++ b/ru/contact.html
@@ -257,9 +257,9 @@ textarea {
 					        	<table border="0" cellpadding="0" cellspacing="0" width="310">
 					    			<tr style="color: #565656;font-family: Arial,Sans-serif,Helvetica;font-size: 0.75em;">
 					      				<td>
-					      					<input  id="btn-submit" type="submit" class="submit" value="Отослать" onfocus="this.blur();" name="Submit"/>
+					      					<input  id="btn-submit" type="submit" class="submit" value="Отправить" onfocus="this.blur();" name="Submit"/>
 					      				</td>
-					      				<td align="right"><span style="color:#00a5e1">* Mобязательные поля</span></td>
+					      				<td align="right"><span style="color:#00a5e1">* обязательные поля</span></td>
 					    			</tr>
 			    				</table>
 			    			</td>
