--- a/ru/index.html
+++ b/ru/index.html
@@ -591,7 +591,7 @@ ul#footer-lefttop li#quick-links ul a:hover {
 					<tr>
 						<td>
 							<a  href="https://www.upwork.com/o/profiles/users/_~01f9faec8be1f2a5f2/" target="_blank" >
-								<img alt="" style="margin-top:-7px;margin-right: 20px; height:30px;" src="images/logos-upwork-ffffff-300x150.png">
+								<img alt="" style="margin-top:-7px;margin-right: 20px; height:30px;" src="../images/logos-upwork-ffffff-300x150.png">
 							</a>						
 						</td>
 						<td>
