--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@ table.favorite_services {
             </div>
             
             <div id="col2" style="margin-right:25px;text-align:justify;">
-            		<a href="cv_AlexKoziy.pdf" style="vertical-align:middle;">
+<!--             		<a href="cv_AlexKoziy.pdf" style="vertical-align:middle;">
             			<img alt="" src="images/cv/res4.png">
-            		</a>
+            		</a> -->
 
             		<a style="" href="contact_project.html">
 	  					<img src="images/consultation/consultation_en.png" style="margin-top:1px;"/>
