--- a/profile_accounting.html
+++ b/profile_accounting.html
@@ -17,7 +17,9 @@
                 
                 <div id="logo" style="float: left;margin-left:20px;margin-top: 15px;">
                 	<!-- span style=" font-size: 38px;font-family: 'LavanderiaSturdySturdy','Trebu'">A l e x a n d e r    &nbsp;&nbsp;&nbsp;   K o z i y</span -->
-                	<img alt="" src="images/logo/name_en2.png">
+                	<a href="index.html">
+	                	<img alt="" src="images/logo/name_en2.png">
+	                </a>
                 </div>
                 
                 <div id="BJ_top2Menu">
