--- a/ru/index.html
+++ b/ru/index.html
@@ -153,7 +153,7 @@ table.favorite_services {
 /*    width: 100%;*/
 }
 
-	@media (max-width: 40em) {
+	@media (max-width: 479px) {
 		.element {
 			display: none;
 		}
