--- a/ru/index.html
+++ b/ru/index.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<title>Разработка CRM и ERP на заказ на Java/J2EE ZK Framework Ajax | @alexkvat | Alexander Koziy</title>
-
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="Разработка CRM ERP систем управления, приложений, поддержка, модернизация , ZKoss zkoss.org Java, J2EE  бесплатная консультация.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
