--- a/ru/contact.html
+++ b/ru/contact.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<title>Бесплатная консультация по разработке CRM</title>
-
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="Получите бесплатную консультацию о процессе разработки CRM и стоимости.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
