--- a/ru/contact_project.html
+++ b/ru/contact_project.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<title>Разработка ERP послать требования</title>
-
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="Отправте требования и получите бесплатную консультацию о процессе разработки ERP и стоимости.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
