--- a/ru/portfolio.html
+++ b/ru/portfolio.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<title>Разработка CRM с использованием ZK Framework</title>
-
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="Разработка CRM с использованием ZK Framework.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
