--- a/ru/profile_utility.html
+++ b/ru/profile_utility.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<title>Обзор системы управления и контроля енергоресурсами</title>
-
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="Система для контроля комунальных предприятий: поставщиков электроенергии, производителей электроенергии, водоканалов, теплопоставщиков и газапоставщиков.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
