--- a/ru/profile_accounting.html
+++ b/ru/profile_accounting.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<title>Обзор CRM для бухгалтерии</title>
-
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="CRM для бухгалтерии для малого бизнеса.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
