--- a/ru/profile_realtor.html
+++ b/ru/profile_realtor.html
@@ -3,7 +3,7 @@
 	<head>
 
 		<title>Обзор CRM для агенств недвижимости</title>
-
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="CRM для агенств недвижимости - это унифицированная система управления контактами, которая помагает агентам по недвижимости хранить всю клиентскую информацию в одной централизованной базе данных.">
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
