--- a/profile_map.html
+++ b/profile_map.html
@@ -20,6 +20,18 @@
                 	<a href="index.html">
 	                	<img alt="" src="images/logo/name_en2.png">
 	                </a>
+	                <br/>
+	                <div style="display: inline-flex;margin-left: 50px;">
+	                		<a  href="https://www.upwork.com/o/profiles/users/_~01f9faec8be1f2a5f2/" target="_blank" style="text-decoration:none;">
+								<img alt="" style="margin-top:-7px;margin-right: 7px;" height="30px" src="images/iconfinder_79-upwork_1929178(2).png">
+							</a>						
+ 							<a  href="https://www.linkedin.com/in/alex-koziy-526b3257/" target="_blank"  style="text-decoration:none;">
+								<img alt="" style="margin-top:-5px;margin-right: 7px;" height="27px" src="images/book+business+circle+contact+contacts+linkedin+icon-1320073242500496551_24.png">
+							</a>
+ 							<a  href="https://www.facebook.com/alex.koziy" target="_blank"  style="text-decoration:none;">
+								<img alt="" style="margin-top:-6px;margin-right: 20px;" height="31px" src="images/facebook-2-64x64.png">
+							</a>
+					</div>
                 </div>
                 
                 <div id="BJ_top2Menu">
@@ -542,11 +554,11 @@ ul#footer-lefttop li#quick-links ul a:hover {
 			<div id="footer-right">
 				<table>
 					<tr>
-						<td>
+<!-- 						<td>
 							<a  href="https://www.linkedin.com/in/alex-koziy-526b3257/" target="_blank" >
 								<img alt="" style="margin-top:-7px;margin-right: 20px;" src="images/iconfinder_LINKEDIN_1217173(2).png">
 							</a>
-						</td>	
+						</td>	 -->
 						<td>
 							<span style="color:#BBBBBB;font-family: 'Lucida Grande',Geneva,Arial,Verdana,sans-serif;font-size:11px;">Alexander Koziy &copy; <script>document.write(new Date().getFullYear())</script></span>
 						</td>
