--- a/ru/about.html
+++ b/ru/about.html
@@ -163,7 +163,7 @@
 						<li>Место проживания: Киев, Украина</li>
 						<li>Специализация: веб-приложения</li>
 						<li>Услуги: разработки веб-ориентированных систем на Java/Java EE, их интеграция с другими системами, поддержка и обновление</li>
-						<li>Технологии: Java/J2EE, ZK, Hibernate, Oracle, MySQL, PostgreSQL</li>
+						<li>Технологии: Java/J2EE, ZK Framework, Spring Framework (loC, Boot, MVC, Data JPA), REST API, Hibernate/JPA, SQL Server, MySQL, PostgreSQL</li>
 					</ul>
            
 	</div>
