--- a/portfolio.html
+++ b/portfolio.html
@@ -212,7 +212,7 @@
 			    <tr id="step-1" class="step">
 			    	<td>
 				   		<div class="recept_etaps_pics" style="padding:0;">
-				   			<a target="_blank" href="https://www.dynamicpublicsafety.com/" class="ga-stat">
+				   			<a target="_blank" href="https://www.linkedin.com/company/dynamic-public-safety/" class="ga-stat">
 				   				<img style="margin-bottom: 10px;" class="lazy imagecache imagecache-336x269 " src="images/works/dps/1_logo.png" alt="Dynamic Public Safety" title="Dynamic Public Safety system" width="440"  />
 				   			</a>
 				   		</div>
@@ -226,7 +226,7 @@
 							<br/>
 							<p class="instructs" style="text-align:justify;">
 								Law Enforcement Software  designed for the unique demands and requirements of criminal justice systems in the USA. Dynamic Public Safety is not a "cookie cutter" system; instead it was built from the ground up to serve the entire law enforcement community.
-								<a target="_blank" href="https://www.dynamicpublicsafety.com/" class="ga-stat">
+								<a target="_blank" href="https://www.linkedin.com/company/dynamic-public-safety/" class="ga-stat">
 									<img src="images/view_details.png" alt="View Project" style="float: right;margin-top:5px;margin-left:5px;" />
 								</a>
 							</p>
