--- a/ru/portfolio.html
+++ b/ru/portfolio.html
@@ -202,7 +202,7 @@
 			    <tr id="step-1" class="step">
 			    	<td>
 				   		<div class="recept_etaps_pics" style="padding:0;">
-				   			<a target="_blank" href="https://www.dynamicpublicsafety.com/" class="ga-stat">
+				   			<a target="_blank" href="https://www.linkedin.com/company/dynamic-public-safety/" class="ga-stat">
 				   				<img style="margin-bottom: 10px;" class="lazy imagecache imagecache-336x269 " src="../images/works/dps/1_logo.png" alt="Dynamic Public Safety" title="Dynamic Public Safety system" width="440"  />
 				   			</a>
 				   		</div>
@@ -216,7 +216,7 @@
 							<br/>
 							<p class="instructs" style="text-align:justify;">
 								Программное обеспечение для правоохранительных органов, разработанное с учетом уникальных требований и требований систем уголовного правосудия в США. Dynamic Public Safety - это не шаблонная система. Она была разработана с нуля, чтобы служить всему правоохранительному сообществу.
-								<a target="_blank" href="https://www.dynamicpublicsafety.com/" class="ga-stat">
+								<a target="_blank" href="https://www.linkedin.com/company/dynamic-public-safety/" class="ga-stat">
 									<img src="../images/view_details_ru.png" alt="View Project" style="float: right;margin-top:5px;margin-left:5px;" />
 								</a>
 							</p>
