--- a/index.html
+++ b/index.html
@@ -617,6 +617,7 @@ ul#footer-lefttop li#quick-links ul a:hover {
 
   ga('create', 'UA-52763100-1', 'auto');
   ga('send', 'pageview');
+  ga('set', 'userId', '67523682139kjhdjkhsdfgsdj'); // Set the user ID using signed-in user_id.
 
 </script>
 	</body>
