--- a/portfolio.html
+++ b/portfolio.html
@@ -84,14 +84,14 @@
 						</ul>
 				</div>
             	
-            	<div style="text-align: right;font-family: courier,fixed;font-size: 13px;margin: 20px 20px 20px 80px;float:left;">
+            	<!-- <div style="text-align: right;font-family: courier,fixed;font-size: 13px;margin: 20px 20px 20px 80px;float:left;">
 
             		<map id="langmap" name="langmap">
             			<area shape="rect" alt="RU" title="" coords="0,0,50,50" href="ru/index.html" target="" />
             			<area shape="rect" alt="EN" title="" coords="51,0,100,50" href="index.html" target="" />
             		</map>
 		       		<img usemap="#langmap" alt="" src="images/lang-switcher/lang.png"/>
-				</div>
+				</div>-->
             </div>
             
             <div id="main">
@@ -906,5 +906,6 @@ ga('send', {
 	</body>
 </html>
 <!-- English footer start -->
+
 
 
