--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- English Header start -->
 <html>  
 	<head>
-		<title>Custom CRM and ERP Development in Java/J2EE ZK Framework Ajax | @alexkvat | Alexander Koziy  </title>
+		<title>Custom CRM and ERP Development in Java/Spring Boot/Jakarta EE ZK Framework Ajax | @alexkvat | Alexander Koziy  </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="Custom CRM ERP Management systems Application Development, Support, Enhancement , ZKoss zkoss.org Java, J2EE development Free consultation.">
@@ -621,6 +621,7 @@ ul#footer-lefttop li#quick-links ul a:hover {
 	</body>
 </html>
 <!-- English footer start -->
+
 
 
 
