--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
 						<li>Based in Kiev, Ukraine</li>
 						<li>Key solutions: Custom web-based applications</li>
 						<li>Key services: Development custom web-oriented management systems on Java/Java EE platform, their integration with other systems, support, maintainance and enhancement </li>
-						<li>Key technologies: Java/J2EE, ZK Framework, Spring Framework (loC, Boot, MVC, Data JPA), REST API, Hibernate/JPA, Oracle, SQL Server, MySQL, PostgreSQL</li>
+						<li>Key technologies: Java/Jakarta EE/Spring Boot, ZK Framework, Spring Framework (loC, Boot, MVC, Data JPA), REST API, Hibernate/JPA, Oracle, SQL Server, MySQL, PostgreSQL</li>
 					</ul>
            
 	</div>
@@ -460,6 +460,7 @@ ul#footer-lefttop li#quick-links ul a:hover {
 	</body>
 </html>
 <!-- English footer start -->
+
 
 
 
