--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 		<link media="all" href="css/font.css" type="text/css" rel="stylesheet"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/topmenu.css"/>
 		<link rel="stylesheet" media="screen" type="text/css" href="css/langswitcher.css"/>
+		<style>
+			html, body {
+			  width: 100%;
+			  overflow-x: hidden;
+			}
+			
+			* {
+			  box-sizing: border-box;
+			}
+			
+			img {
+			  max-width: 100%;
+			  height: auto;
+			  display: block;
+			}
+		</style>
 	</head>
 	<body style="background:url('images/backgroungs/2.png');	background-position:bottom top;font-family: 'Lucida Grande',Geneva,Arial,Verdana,sans-serif;" >
 
@@ -621,6 +637,7 @@ ul#footer-lefttop li#quick-links ul a:hover {
 	</body>
 </html>
 <!-- English footer start -->
+
 
 
 
