--- a/contact_team.html
+++ b/contact_team.html
@@ -526,7 +526,7 @@
     <div class="contact-header">
       <h1>Build, Scale, and Deliver Software with Confidence</h1>
       <p>
-        <a href="https://quontex.co/" target="_blank" class="quontex-link">Quontex</a> helps companies accelerate software delivery by combining
+        <a href="https://quontex.co/" target="_blank" rel="noopener" class="quontex-link">Quontex</a> helps companies accelerate software delivery by combining
         strong engineering expertise, transparent processes, and business-focused execution.
       </p>
     </div>
@@ -535,7 +535,7 @@
 
       <!-- VALUE PROPOSITION -->
       <div class="contact-info">
-        <h2>Why Companies Choose <a href="https://quontex.co/" target="_blank" class="quontex-link">Quontex</a></h2>
+        <h2>Why Companies Choose <a href="https://quontex.co/" target="_blank" rel="noopener" class="quontex-link">Quontex</a></h2>
         <ul>
           <li>✔️ Dedicated development teams aligned with your business goals</li>
           <li>✔️ Predictable delivery for startups, scale-ups, and enterprises</li>
