--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 	    or as a
 	    <span class="highlight delivery">
 	      sales and engagement manager representing
-	      <strong><a href="https://quontex.co/" target="_blank" class="quontex-link">Quontex</a></strong>
+	      <strong><a href="https://quontex.co/" target="_blank" rel="noopener" class="quontex-link">Quontex</a></strong>
 	    </span>.
 	  </p>
 	</div>
@@ -328,9 +328,9 @@
         <span class="path-label">Delivery Model</span>
         <h3>Dedicated Teams & Project Delivery</h3>
         <p class="path-intro">
-		  I work with clients on behalf of <a href="https://quontex.co/" target="_blank" class="quontex-link">Quontex</a> to structure and launch dedicated development teams tailored to enterprise project needs.
+		  I work with clients on behalf of <a href="https://quontex.co/" target="_blank" rel="noopener" class="quontex-link">Quontex</a> to structure and launch dedicated development teams tailored to enterprise project needs.
 			<br/>
-          My role covers presales consulting, engagement setup, delivery coordination, and long-term partnership management, ensuring that <a href="https://quontex.co/" target="_blank" class="quontex-link">Quontex</a> teams deliver predictable and scalable results.        
+          My role covers presales consulting, engagement setup, delivery coordination, and long-term partnership management, ensuring that <a href="https://quontex.co/" target="_blank" rel="noopener" class="quontex-link">Quontex</a> teams deliver predictable and scalable results.        
         </p>
       </div>
 
@@ -344,7 +344,7 @@
       <div class="service-item">
         <h4>Dedicated development teams</h4>
         <p>
-          <a href="https://quontex.co/" target="_blank" class="quontex-link">Quontex</a> assembles and delivers dedicated development teams to execute enterprise IT projects from planning to production.
+          <a href="https://quontex.co/" target="_blank" rel="noopener" class="quontex-link">Quontex</a> assembles and delivers dedicated development teams to execute enterprise IT projects from planning to production.
 
 		  I support clients throughout the engagement lifecycle — from initial requirements and team setup to delivery alignment and long-term cooperation.
         </p>
