--- a/contact_project.html
+++ b/contact_project.html
@@ -409,7 +409,7 @@
         </a>
 
         <div class="zk-secondary-links">
-          <a href="mailto:alex.ksoft@gmail.com" class="quontex-link">Send Email</a>
+          <a href="mailto:info@alexkoziy.com" class="quontex-link">Send Email</a>
           <span>•</span>
           <a href="https://www.linkedin.com/in/alex-koziy-526b3257/"
              target="_blank"
