--- a/contact_team.html
+++ b/contact_team.html
@@ -572,7 +572,7 @@
 			    <span style="font-size:1.2em;">📅</span> Book a Call
 			  </a>
 			  <div class="zk-secondary-links">
-		          <a href="mailto:alex.ksoft@gmail.com" class="quontex-link">Send Email</a>
+		          <a href="mailto:info@alexkoziy.com" class="quontex-link">Send Email</a>
 		          <span>•</span>
 		          <a href="https://www.linkedin.com/in/alex-koziy-526b3257/" class="quontex-link"
 		             target="_blank"
