--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
         </a>
 
         <div class="zk-secondary-links">
-          <a href="mailto:alex.ksoft@gmail.com" class="quontex-link">Send Email</a>
+          <a href="mailto:info@alexkoziy.com" class="quontex-link">Send Email</a>
           <span>•</span>
           <a href="https://www.linkedin.com/in/alex-koziy-526b3257/"
              target="_blank"
@@ -827,7 +827,7 @@
           Send message
         </button>
 
-<!--         <a href="mailto:alex.ksoft@gmail.com" class="btn btn-secondary">
+<!--         <a href="mailto:info@alexkoziy.com" class="btn btn-secondary">
           Email directly
         </a> -->
       </div>
