add phone hidden

--- a/contact_team.html
+++ b/contact_team.html
@@ -602,6 +602,7 @@
 			<input type="hidden" name="RequiredFields" value="Anrede#Title,Name#Name,email#E-mail address,Nachricht#Message"/>
       
       		<input type="hidden" name="entry.215105256" id="entry.215105256" value="Mr_team"/>
+      		<input type="hidden" name="entry.1672738241" id="entry.1672738241" value="phone_team"/>
 <!-- 		<div>
         	<h2 style="margin-bottom: 0;">Contact</h2>
 		</div> -->
