--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 	  <title>ZK Framework Developer — Alex Koziy</title>
 	  <link rel="stylesheet" href="css/style.css" />
+	  <link rel="icon" href="images/logo_AK32x29.png"/>
 	</head>
 	<body id="top">
   
