--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 	  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 	  <title>ZK Framework Developer — Alex Koziy</title>
 	  <link rel="stylesheet" href="css/style.css" />
-	  <link rel="icon" href="images/logo_AK32x29.png"/>
+
+		<!-- Favicon -->
+		<link rel="icon" href="images/logo_AK32x29.png" sizes="any">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/logo_AK32x29.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/logo_AK16x14.png">
+		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+		<link rel="manifest" href="/site.webmanifest">
 	</head>
 	<body id="top">
   
