--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="icon" href="images/logo_AK32x29.png" sizes="any">
 		<link rel="icon" type="image/png" sizes="32x32" href="images/logo_AK32x29.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="images/logo_AK16x14.png">
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+		<link rel="apple-touch-icon" href="images/logo_AK180x164.png">
 		<link rel="manifest" href="/site.webmanifest">
 	</head>
 	<body id="top">
