# WARNING: head commit changed in the meantime
Merge branch 'master' of
https://github.com/alexksite/alexksite.github.io.git

--- a/contact_project.html
+++ b/contact_project.html
@@ -4,7 +4,7 @@
   <script src="jquery16/jquery.min.js"></script>	
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>ZK Framework Developer — Alex Koziy</title>
+  <title>Java Spring Boot Developer — Alex Koziy</title>
   <link rel="stylesheet" href="css/style.css" />
 	<!-- Favicon -->
 		<link rel="icon" href="images/logo_AK32x29.png" sizes="any">
@@ -33,7 +33,7 @@
 	      <li><a href="index.html#clients-partners">Clients & Partners</a></li>
 	      <li><a href="index.html#contact">Contact</a></li>
 	      <li class="onlyhamburger"><a href="contact_team.html">Request a Team</a></li>
-	      <li class="onlyhamburger"><a href="contact_project.html">Hire ZK Framework expert</a></li>
+	      <li class="onlyhamburger"><a href="contact_project.html">Hire Java Spring Boot developer</a></li>
     </ul>
   </div>
 </nav>
@@ -344,10 +344,10 @@
 
     <!-- HEADER -->
     <header class="zk-intro">
-      <h2>Hire Me as a ZK Framework Expert</h2>
+      <h2>Hire Me as a Java Spring Boot developer</h2>
       <p>
         Senior-level, hands-on expertise for teams running
-        mission-critical ZK applications.
+        mission-critical applications.
       </p>
     </header>
 
@@ -361,12 +361,12 @@
 
         <ul class="zk-help-list">
           <li>
-            <strong>ZK Framework expertise (ZK 3–10)</strong><br />
-            Hands-on experience across nearly all ZK versions, including MVC & MVVM.
+            <strong>Java/Spring Boot REST API expertise </strong><br />
+            Hands-on experience across development, maintenance and integration of REST API.
           </li>
           <li>
             <strong>Performance & architecture optimization</strong><br />
-            Reduce server load, improve UI responsiveness, and stabilize large applications.
+            Reduce server load, and stabilize large applications.
           </li>
           <li>
             <strong>Legacy modernization</strong><br />
