--- a/contact_team.html
+++ b/contact_team.html
@@ -4,7 +4,7 @@
   <script src="jquery16/jquery.min.js"></script>	
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>ZK Framework Developer — Alex Koziy</title>
+  <title>Java Spring Boot Developer — Alex Koziy</title>
   <link rel="stylesheet" href="css/style.css" />
 	<!-- Favicon -->
 		<link rel="icon" href="images/logo_AK32x29.png" sizes="any">
@@ -33,7 +33,7 @@
 	      <li><a href="index.html#clients-partners">Clients & Partners</a></li>
 	      <li><a href="index.html#contact">Contact</a></li>
 	      <li class="onlyhamburger"><a href="contact_team.html">Request a Team</a></li>
-	      <li class="onlyhamburger"><a href="contact_project.html">Hire ZK Framework expert</a></li>
+	      <li class="onlyhamburger"><a href="contact_project.html">Hire Java Spring Boot developer</a></li>
     </ul>
   </div>
 </nav>
@@ -552,10 +552,10 @@
         <div class="contact-note">
           <!-- <strong>Best fit for:</strong><br />
           CTOs, Product Owners, and decision-makers who need reliable delivery — not just code. -->
-          Looking for ZK Framework expertise?
+          Looking for Java / Spring Boot expertise?
 			<div class="expert-link-box">
 			  <a href="contact_project.html">
-			    <strong>Hire me as a ZK Framework expert →</strong>
+			    <strong>Hire me as a Java / Spring Boot developer →</strong>
 			  </a>
 			</div>
         </div>
