--- a/case_studies.html
+++ b/case_studies.html
@@ -4,7 +4,7 @@
   <script src="jquery16/jquery.min.js"></script>	
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>ZK Framework Developer — Alex Koziy</title>
+  <title>Java Spring Boot Developer — Alex Koziy</title>
   <link rel="stylesheet" href="css/style.css" />
 <!-- Favicon -->
 		<link rel="icon" href="images/logo_AK32x29.png" sizes="any">
@@ -33,7 +33,7 @@
 	      <li><a href="index.html#clients-partners">Clients & Partners</a></li>
 	      <li><a href="index.html#contact">Contact</a></li>
 	      <li class="onlyhamburger"><a href="contact_team.html">Request a Team</a></li>
-	      <li class="onlyhamburger"><a href="contact_project.html">Hire ZK Framework expert</a></li>
+	      <li class="onlyhamburger"><a href="contact_project.html">Hire Java Spring Boot developer</a></li>
     </ul>
   </div>
 </nav>
