--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 	<div class="engagement-overview">
 	  <p>
 	    I engage with clients either
-	    <span class="highlight expert">directly as an independent ZK Framework specialist</span>,
+	    <span class="highlight expert">directly as an independent Java/Spring Boot specialist</span>,
 	    or as a
 	    <span class="highlight delivery">
 	      sales and engagement manager representing
